# learning_values

./: CMakeLists.txt  package.xml
config/: display_baxter.rviz  display_human.rviz  display_interaction.rviz  display_schunk.rviz
include/learning_values/: base_ann.h  legible_motion_2d.h
launch/: load_baxter_scene.launch  load_human_scene.launch  load_interactive_scene.launch  load_interactive_scene2.launch  load_schunk_scene.launch
src/: ChainFkSolverPos_updated.cpp  ChainFkSolverPos_updated.h  analyze_poses.cpp  analyze_poses.h  analyze_poses_interactive.cpp  analyze_poses_interactive2.cpp  analyze_poses_visually.cpp  base_ann.cpp  create_samples_human.cpp  interaction.cpp  interaction.h  interaction_two_subjects.cpp  legible_motion_2d.cpp  store_poses_base_relative.cpp  test_ann.cpp
urdf/: human_arm.urdf.xacro  human_arm_sim.urdf.xacro  model_schunk.urdf  schunk_arm_urdf.xacro
