<?xml version="1.0"?>
<package>
  <name>learning_values</name>
  <version>0.0.0</version>
  <description>The learning_values package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ana@todo.todo">ana</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>interactive_markers</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>interactive_markers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
